    to make subject lists which DON'T have all the super-subjects as
    part of each label.
 - added type, eprintid and desc to the options to the titles in the
    submission form. They're not all used, but could be if people want.
 - redesigned file upload section. No functional changes, but extensive
    cosmetic ones.
 - User eprints now returned sorted by eprintid
 - render_date now only shows "Feb 2000" if day == 00
 - created _citation_field_value to tidy up citation rendering code.
 - [c] lots more changes to phrase files and stylesheet. Stylesheet really
    needs a spring clean.
 - All fields in citations are now class'd with span tags for extra 
    easy style changes via CSS, and for an easy life for extraction tools.

(eprints2-3-0-tardis-2)
 
2003-06-17 cjg
 
 - [c] removed "chapter" metadata field, no longer used.
 - [c] added "fileinfo" metadata field, will be used for caching info
    on available file formats for use when rendering citations.
 - [c] default editor summary mailing frequency is no "never" not NULL
 - [c] renamed conf_or_pres type to conference_item
 - [c] valign="top" added to render_row for abstract page. looks a bit
    neater.
 - [c] added harvard style(ish) citation formats for all types. As 
    good as possible, based on lots of different standards for the 
    standard. It's bound to be wrong, but at least it's neat and 
    consistant.
 - removed a stray debug line from oai2
 - fixed a bug in oai2, ListMetadataFormats used oai v1.1 config, now
    uses v2.
 - [d] removed "max_resolution" metafield option. Now just uses ;res=Y
    in citations & browse views.
 - internationalised subject browser.
 - searchfield now correctly renders descriptions of date searches. 
 - moved ": " the subject-path-join into the phrase file, and changed
    it to " > "
 - swapped the order of the confirm delete buttons to make "confirm"
    come first.

======================================================================