@@ -198,17 +198,37 @@ print CONF <<END;
 
 NameVirtualHost $virtualhost
 
-# If the apache configuration is reloaded the the
-# perl modules (and therefore archive configurations)
-# must be reloaded too.
-PerlFreshRestart  On
-
 # Load the perl modules & archive configurations
 PerlRequire $startupfile
 
 END
+
+my $av =  $EPrints::SystemSettings::conf->{apache_version};
+if( defined $av && $av eq "2" )
+{
+	# apache 2
+	print CONF <<END;
+# Makes the request object accessable for other objects
+# (apache 2.0 only)
+PerlOptions +GlobalRequest
+
+END
+}
+else
+{
+	# apache 1
+	print CONF <<END;
+# If the apache configuration is reloaded the the
+# perl modules (and therefore archive configurations)
+# must be reloaded too.
+# (apache 1.3 only)
+PerlFreshRestart  On
+
+END
+}
 close CONF;
 
+########################################
 
 print "Creating $site_incfile.\n" if( $noise >= 2 );
 open( CONF, ">$site_incfile" ) || die "Can't write to $site_incfile";
